--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -35,10 +35,9 @@ img:hover:not(.polen) {
   margin-top: 100px;
 }
 .name-word {
-  font-size: 250px;
+  font-size: 150px;
   line-height: 78%;
   font-weight: 800;
-  letter-spacing: -20px;
 }
 .intro {
   margin-bottom: -10px;
