--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,7 +1,11 @@
 /* Home general */
-body {
+html, body {
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
+    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 h5 {
@@ -9,9 +13,9 @@ h5 {
     line-height: 110%;
 }
 
-.about {
-    width: 100%;
-}
+// .about {
+//     width: 100%;
+// }
 
 .content {
     display: flex;
